# Copyright 2026 the contributors of APPXF (github.com/alexander-nbg/appxf)
# SPDX-License-Identifier: 0BSD
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/.*",
  "tests",
  "requirements_test.txt"
]

[project]
name = "appxf"
version = "0.0.3a0"
authors = [
  { name = "alexander-nbg", email="mail@alexander-nbg.de" }
]
description = "APPXF application (APP) cross functional concerns (XF)"
readme = "README.md"
requires-python = ">=3.10"
license="Apache-2.0"
license_file = "LICENSES/Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.entry-points.pyinstaller40]
hook-dirs = "appxf.pyinstaller:get_hook_dirs"

[tool.appxf]
# The testing sandbox is the root directory where files are placed that are
# needed or generated during test case. Each test case should use individual
# subfolders.
test-sandbox-root = "./.testing"

# Note: flake8 does not support reading configuration from pyproject.toml. You
# have to install pyproject-flake8 and run flake8p to have the following
# conifugration effective.
# See: https://pypi.org/project/Flake8-pyproject/
[tool.flake8]
filename = './src/**/*.py'
per-file-ignores = [
    # ignore "not used imports" in __init__ files:
    '__init__.py:F401',
]
count = true

[tool.ruff]
# Target Python version (minimum supported version)
target-version = "py310"
# Directories to check (mirrors flake8 filename setting)
src = ["src"]
# Line length - ruff default is 88 (same as black). Adjust as needed.
line-length = 88

[tool.ruff.lint]
# Minimum rule set: E (pycodestyle errors) and F (pyflakes) mirror flake8 defaults.
# These rules catch the most common code quality issues.
select = ["E", "F"]

# Recommended additional rule sets to activate (uncomment and fix issues incrementally):
# "W"  - pycodestyle warnings (whitespace, blank lines)
# "I"  - isort import ordering (ensures consistent import order)
# "N"  - pep8 naming conventions (variable, function, class names)
# "UP" - pyupgrade: enforce modern Python syntax (e.g. f-strings, type hints)
# "B"  - flake8-bugbear: opinionated checks that catch common bugs
# "C4" - flake8-comprehensions: unnecessary list/dict/set comprehensions
# "SIM"- flake8-simplify: suggest simpler code constructs
# "ANN"- flake8-annotations: enforce type annotations
# "RUF"- ruff-specific rules (misc. best-practice checks)

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in __init__ files (re-exports are intentional)
"__init__.py" = ["F401"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    isolated_build = True
    env_list = py310, py312

    [gh-actions]
    python =
        3.10: py310
        3.12: py312

    [testenv]
    passenv = APPXF_*
    setenv = PYTHONPATH = {toxinidir}
             VIRTUALENV_DOWNLOAD=0
    deps =
      -r{toxinidir}/requirements.txt
      -r{toxinidir}/requirements_test.txt

    commands = pytest -rA tests/_fixtures/application.py::test_cleanup
               coverage erase
               coverage run --source=appxf --context=UNIT --branch -m pytest -rA ./tests
               coverage report --contexts=UNIT
               coverage html --contexts=UNIT -d cov_html_UNIT
               coverage run -a --source=appxf --context=FEATURE --branch -m pytest -rA ./tests_features
               coverage report --contexts=FEATURE
               coverage html --contexts=FEATURE -d cov_html_FEATURE
               coverage report
               coverage html -d cov_html
"""
# commands = pytest --cov=appxf --cov-report html --cov-report term
# commands = coverage run --source src -m pytest