# Copyright 2026 the contributors of APPXF (github.com/alexander-nbg/appxf)
# SPDX-License-Identifier: 0BSD
[project]
name = "appxf"
version = "0.0.3a0"
authors = [
  { name = "alexander-nbg", email="mail@alexander-nbg.de" }
]
description = "APPXF application (APP) cross functional concerns (XF)"
readme = "README.md"
requires-python = ">=3.10"
license="Apache-2.0"
license_file = "LICENSES/Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/.*",
  "tests",
  "requirements_test.txt"
]

[project.entry-points.pyinstaller40]
hook-dirs = "appxf.pyinstaller:get_hook_dirs"

[tool.appxf]
# The testing sandbox is the root directory where files are placed that are
# needed or generated during test case. Each test case should use individual
# subfolders.
test-sandbox-root = "./.testing"

[tool.ruff]
# Note: Line length default is already 88. Minimum python version is taken from project
# configuration.

[tool.ruff.lint]
# Remarks:
#  * E (pycodestyle errors; PEP8)
#  * F (pyflakes; flake8 defaults)
select = ["E", "F"]
# TODO: Review and consider the following further checks:
# "W"  - pycodestyle warnings (whitespace, blank lines)
# "I"  - isort import ordering (ensures consistent import order)
# "N"  - pep8 naming conventions (variable, function, class names)
# "UP" - pyupgrade: enforce modern Python syntax (e.g. f-strings, type hints)
# "B"  - flake8-bugbear: opinionated checks that catch common bugs
# "C4" - flake8-comprehensions: unnecessary list/dict/set comprehensions
# "SIM"- flake8-simplify: suggest simpler code constructs
# "ANN"- flake8-annotations: enforce type annotations
# "RUF"- ruff-specific rules (misc. best-practice checks)

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint.per-file-ignores]
# Unused imports in __init__.py are intentional re-exports.
"__init__.py" = ["F401"]
# TODO: This is a slight issue since in some occasions, it causes unwanted dependencies.
# Example: when storage activated FTP again, any usage of storage would also import the
# dependency to FTP. This is acceptable for now, but not on the long run. Despite the
# other solutions (adding to __all__ and maxing the re-imports explicit with [import XY
# as XY]), merging classes into appropriate longer module files would enable dropping
# the module facade in __init__.py

[tool.tox]
legacy_tox_ini = """
    [tox]
    isolated_build = True
    env_list = py310, py312

    [gh-actions]
    python =
        3.10: py310
        3.12: py312

    [testenv]
    passenv = APPXF_*
    setenv = PYTHONPATH = {toxinidir}
             VIRTUALENV_DOWNLOAD=0
    deps =
      -r{toxinidir}/requirements.txt
      -r{toxinidir}/requirements_test.txt

    commands = pytest -rA tests/_fixtures/application.py::test_cleanup
               coverage erase
               coverage run --source=appxf --context=UNIT --branch -m pytest -rA ./tests
               coverage report --contexts=UNIT
               coverage html --contexts=UNIT -d cov_html_UNIT
               coverage run -a --source=appxf --context=FEATURE --branch -m pytest -rA ./tests_features
               coverage report --contexts=FEATURE
               coverage html --contexts=FEATURE -d cov_html_FEATURE
               coverage report
               coverage html -d cov_html
"""
# commands = pytest --cov=appxf --cov-report html --cov-report term
# commands = coverage run --source src -m pytest